Java 1.3 Kompatibilität
git-svn-id: svn+ssh://demeter.matha.rwth-aachen.de/home/Projekte/ilias/svn@58 688fd007-192f-0410-aed6-f784cf09bbae